# arbot

./: Cargo.toml  Dockerfile  README.md  binance-spot-fix-oe.xml
data/: binance-spot-fix-oe.xml  tickers.json
src/: draft.rs  main.rs
src/core/: api.rs  dto.rs  handlers.rs  map.rs  mod.rs  oes.rs  oms.rs  order_sizing.rs  price_ticker_collector.rs  price_tickers_graph.rs  strategies.rs  streams.rs  utils.rs
src/core/streams/: binance.rs  bit2me.rs  mexc.rs  mod.rs
tests/: oes_tests.rs  test_sizing.rs
