[package]
name = "untitled"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio-tungstenite = "*"
tungstenite = { version = "*", features = ["rustls-tls-webpki-roots"] }
url = "*"
env_logger = "*"
log = "*"
json = "*"
crossbeam-queue = "*"
petgraph = "*"
itertools = "*"
uuid = { version = "1.10.0", features = ["v4"] }


fefix = { git =  "https://github.com/ferrumfix/ferrumfix/", branch = "main" }
ed25519-dalek = { version = "*", features = ["pem"] }
rustls = "0.23.14"
webpki-roots = "0.26.6"
base64 = "0.22.1"
chrono = "*"
